deployment/udaconnect-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-api
  name: udaconnect-api
  namespace: udaconnect
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
    nodePort: 30001
  selector:
    service: udaconnect-api
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: uda-api
  namespace: udaconnect
  labels:
    service: udaconnect-api
spec:
  selector:
    service: udaconnect-api
  type:  ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: udaconnect-api
  name: udaconnect-api
  namespace: udaconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      service: udaconnect-api
  template:
    metadata:
      labels:
        service: udaconnect-api
    spec:
      containers:
      - image: aold619/udaconnect-api:latest
        name: udaconnect-api
        imagePullPolicy: Always
      restartPolicy: Always
