deployment/udaconnect-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-app
  name: udaconnect-app
  namespace: udaconnect
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
    nodePort: 30010
  selector:
    service: udaconnect-app
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udaconnect-app
  name: uda-app
  namespace: udaconnect
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    service: udaconnect-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: udaconnect-app
  name: udaconnect-app
  namespace: udaconnect
spec:
  replicas: 1
  selector:
    matchLabels:
      service: udaconnect-app
  template:
    metadata:
      labels:
        service: udaconnect-app
    spec:
      containers:
      - image: aold619/udaconnect-app:latest
        name: udaconnect-app
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
            cpu: "64m"
          limits:
            memory: "256Mi"
            cpu: "256m"
      restartPolicy: Always
