deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uda-app-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - uda.duckduck.io
    secretName: uda-app-tls
  rules:
  - host: uda.duckduck.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uda-app
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: uda-api
            port:
              number: 80
